{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 362,
  "lineage": "249e1c0e-8837-58af-39fe-0de60c168969",
  "resources": [
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.0.0/22",
            "address_prefixes": [
              "172.16.0.0/22"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/a-public-dev",
            "name": "a-public-dev",
            "resource_group_name": "dev",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "vnet-dev"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.4.0/22",
            "address_prefixes": [
              "172.16.4.0/22"
            ],
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/b-private-dev",
            "name": "b-private-dev",
            "resource_group_name": "dev",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "vnet-dev"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.8.0/22",
            "address_prefixes": [
              "172.16.8.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/c-private-dev",
            "name": "c-private-dev",
            "resource_group_name": "dev",
            "service_endpoints": [
              "Microsoft.Web",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-dev"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_a_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/a-public-dev",
            "network_security_group_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev",
            "subnet_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/a-public-dev"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.subnet_a",
            "module.networking.azurerm_virtual_network.vnet",
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_b_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/b-private-dev",
            "network_security_group_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev",
            "subnet_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/b-private-dev"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.subnet_b",
            "module.networking.azurerm_virtual_network.vnet",
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_c_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/c-private-dev",
            "network_security_group_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev",
            "subnet_id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/c-private-dev"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.subnet_c",
            "module.networking.azurerm_virtual_network.vnet",
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/19"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "98deee41-cb9f-43e7-bff0-9af48ffd427e",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev",
            "location": "westus",
            "name": "vnet-dev",
            "resource_group_name": "dev",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/22",
                "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/a-public-dev",
                "name": "a-public-dev",
                "security_group": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev"
              },
              {
                "address_prefix": "172.16.4.0/22",
                "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/b-private-dev",
                "name": "b-private-dev",
                "security_group": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev"
              },
              {
                "address_prefix": "172.16.8.0/22",
                "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/c-private-dev",
                "name": "c-private-dev",
                "security_group": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-a",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev",
            "location": "westus",
            "name": "sg-snet-a-dev",
            "resource_group_name": "dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "sgro-snet-a-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-a-100-dev",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-a-101-dev",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-a-102-dev",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.30.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-a-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-a",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpi_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev/securityRules/sgri-snet-a-100-dev",
            "name": "sgri-snet-a-100-dev",
            "network_security_group_name": "sg-snet-a-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev/securityRules/sgri-snet-a-101-dev",
            "name": "sgri-snet-a-101-dev",
            "network_security_group_name": "sg-snet-a-dev",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev/securityRules/sgri-snet-a-102-dev",
            "name": "sgri-snet-a-102-dev",
            "network_security_group_name": "sg-snet-a-dev",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "172.16.30.0/23",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev/securityRules/sgri-snet-a-110-dev",
            "name": "sgri-snet-a-110-dev",
            "network_security_group_name": "sg-snet-a-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-a",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpo_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-a-dev/securityRules/sgro-snet-a-110-dev",
            "name": "sgro-snet-a-110-dev",
            "network_security_group_name": "sg-snet-a-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-a.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-b",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev",
            "location": "westus",
            "name": "sg-snet-b-dev",
            "resource_group_name": "dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-b-100-dev",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "sgro-snet-b-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-b-101-dev",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-b-102-dev",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.30.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-b-103-dev",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "ApiManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-b-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-b",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpi_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgri-snet-b-100-dev",
            "name": "sgri-snet-b-100-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgri-snet-b-101-dev",
            "name": "sgri-snet-b-101-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgri-snet-b-102-dev",
            "name": "sgri-snet-b-102-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "172.16.30.0/23",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgri-snet-b-103-dev",
            "name": "sgri-snet-b-103-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "ApiManagement",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgri-snet-b-110-dev",
            "name": "sgri-snet-b-110-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-b",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpo_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-b-dev/securityRules/sgro-snet-b-110-dev",
            "name": "sgro-snet-b-110-dev",
            "network_security_group_name": "sg-snet-b-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-b.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-c",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev",
            "location": "westus",
            "name": "sg-snet-c-dev",
            "resource_group_name": "dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-c-100-dev",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "sgro-snet-c-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ANP",
                "priority": 104,
                "protocol": "TCP",
                "source_address_prefix": "179.100.1.96/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-c-101-dev",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-c-102-dev",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.30.0/23",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-c-103-dev",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "ApiManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sgri-snet-c-110-dev",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-c",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpi_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgri-snet-c-100-dev",
            "name": "sgri-snet-c-100-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgri-snet-c-101-dev",
            "name": "sgri-snet-c-101-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgri-snet-c-102-dev",
            "name": "sgri-snet-c-102-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "172.16.30.0/23",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgri-snet-c-103-dev",
            "name": "sgri-snet-c-103-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "ApiManagement",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgri-snet-c-110-dev",
            "name": "sgri-snet-c-110-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0].module.security-sg-sub-c",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "secgrpo_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/eed7793f-216a-4d5f-8650-23329c6ab0b5/resourceGroups/dev/providers/Microsoft.Network/networkSecurityGroups/sg-snet-c-dev/securityRules/sgro-snet-c-110-dev",
            "name": "sgro-snet-c-110-dev",
            "network_security_group_name": "sg-snet-c-dev",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.security-sg-sub-c.azurerm_network_security_group.secgrp",
            "module.resgrp.azurerm_resource_group.grp"
          ]
        }
      ]
    }
  ]
}